# gecko

./: .flake8  .gitignore  README.md  pyproject.toml
configs/: hp_0_5.json  hp_1_5.json  km.json  pbh.json  rhn_e.json  rhn_mu.json  sc_ann.json  sc_dec.json
gecko/: __init__.py  config.py  constrainers.py  gecco.py  generate.py  higgs_portal.py  kinetic_mixing.py  mplconfig.py  pbh.py  rh_neutrino.py  single_channel.py  utils.py
notebooks/: Generate.ipynb  Untitled.ipynb
notebooks/.ipynb_checkpoints/: Generate-checkpoint.ipynb
plots/: mpl_conf.py  plot_511_keV.py  plot_higgs_portal.py  plot_kinetic_mixing.py  plot_pbh.py  plot_rhn.py  plot_single_channel_ann.py  plot_single_channel_dec.py  utils.py
plots/figures/: README.md
plots/results/: higgs_portal_0_5.hdf5  higgs_portal_1_5.hdf5  kinetic_mixing.hdf5  pbh.hdf5  rhn_e.hdf5  rhn_mu.hdf5  single_channel_ann.hdf5  single_channel_dec.hdf5
results/: higgs_portal_0_5.hdf5  higgs_portal_1_5.hdf5  kinetic_mixing.hdf5  rhn_e.hdf5  rhn_mu.hdf5  single_channel_ann.hdf5  single_channel_dec.hdf5
scripts/: README.md  generate.py  generate_higgs_portal.py  generate_kinetic_mixing.py  generate_single_channel_ann.py  generate_single_channel_dec.py  mpl_conf.py  plot_higgs_portal.py  plot_kinetic_mixing.py  plot_rhn.py  plot_single_channel_ann.py  plot_single_channel_dec.py  utils.py
scripts/bak/: generate_higgs_portal.py  generate_rh_neutrino.py  generate_single_channel_ann.py
scripts/configs/: hp_0_5.json  rhn_e.json  rhn_mu.json  sc_ann.json
tests/: test_gecko.py
